# polycheck

./: CMakeLists.txt  README.md  install.bash  pyproject.toml  test_poly.py
examples/: polytest.py  test_vis.py
include/: common.h  point_in_polygon.h  visibility.h
polycheck/: __init__.py  poly_warp.py  polycheck.py  simple_occlusion.MD  warp.py
python_gpu/: README.md
python_gpu/polycheck/: polygpu.py
src/: point_in_polygon.cu  polycheck.cpp  visibility.cu
tests/: test_bresenham_endpoint.py  test_comparison.py  test_contains.py  test_sensor_visibility.py  test_visibility_stability.py
